# AIGit

./: README.md  pyproject.toml
.aigit/: PROJECT_CONTEXT.md  config.json  prompts.json
.github/workflows/: publish.yml  workflow.yml
src/aigit/: cli.py  config.py  core.py  git_client.py  llm_client.py  prompts.json
src/aigit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/aixgit/: cli.py  config.py  core.py  git_client.py  llm_client.py  prompts.json
