[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aigit"
version = "0.1.0"
description = "A context-aware AI CLI proxy for Git."
authors = [{name = "Your Name", email = "your.email@example.com"}]
dependencies = [
    "requests",
    "rich"
]
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
aigit = "aigit.cli:main"
