[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aixgit"
version = "0.1.3"
description = "A context-aware AI CLI proxy for Git."
authors = [{name = "Your Name", email = "your.email@example.com"}]
dependencies = [
    "requests",
    "rich"
]
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
aixgit = "aixgit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
